<resources>
    <string name="app_name">Tchoutchou</string>
    <string name="new_game">Start new game</string>
    <string name="shop">Shop</string>
    <string name="go_back">Return</string>
    <string name="train_parts">Train Parts</string>
    <string name="bronze_upgrade_title">Bronze Upgrade</string>
    <string name="bronze_upgrade_price">14T$</string>
    <string name="bronze_upgrade_description">Faster train, better life</string>
    <string name="silver_upgrade_title">Silver Upgrade</string>
    <string name="silver_upgrade_description">Ideal for hanging out</string>
    <string name="silver_upgrade_price">28T$</string>
    <string name="gold_upgrade_title">Gold Upgrade</string>
    <string name="gold_upgrade_description">Faster than light</string>
    <string name="gold_upgrade_price">42T$</string>
    <string name="options">Options</string>
    <string name="quit_game">Quit game</string>
    <string name="G1_title">The story of a lifetime</string>
    <string name="G1_subtitle">All aboard the hype train!</string>
    <string name="G1_sentence">You\'re about to venture into a lawless path... Do you really want to leave the station? </string>
    <string name="G1_choice_1">Hell yeah I’m in! GOING ON AN ADVENTUUUUUURE!</string>
    <string name="G1_choice_2">Not today, I’m just gonna chill on Minecraft...</string>
    <string name="G2_title">Shout from another world</string>
    <string name="G2_subtitle">The story of a man who coughs</string>
    <string name="G2_sentence">You hit the road and arrived at the first station, the trip went well. You hear a voice in the distance while resting from your exhausting journey.</string>
    <string name="G2_choice_1">I’d better go check.</string>
    <string name="G2_choice_2">Hit &amp; Run!</string>
    <string name="G3_title">An unexpected meeting</string>
    <string name="G3_subtitle">(Who roams in subways, seriously?)</string>
    <string name="G3_sentence">You find a young man on the tracks. He seems hurt. You wonder whether you should help him or not.</string>
    <string name="G3_choice_1">No pity! He’d better move!</string>
    <string name="G3_choice_2">Apart from the shady tattoo, he doesn\'t look that bad.</string>
    <string name="G4_title">The phantom station</string>
    <string name="G4_subtitle">Spookiest place in town</string>
    <string name="G4_sentence">You arrive in a completely deserted station, yet you can see that there have been inhabitants recently.</string>
    <string name="G4_choice_1">High risk, high reward! Let’s loot.</string>
    <string name="G4_choice_2">*shivers* Not really sure about this one.</string>
    <string name="G5_title">The merchant from the depths</string>
    <string name="G5_subtitle">Pay and pray</string>
    <string name="G5_sentence">You see lights in the distance, which is quite rare in this area. You slowly approach and realize that they are merchants down there.</string>
    <string name="G5_choice_1">Kill and loot!</string>
    <string name="G5_choice_2">I’m a smooth talker, king of the deal!</string>
    <string name="G6_title">The Reaper</string>
    <string name="G6_subtitle">Nothing personal, kid</string>
    <string name="G6_sentence">You heard a legend before you set out on your adventure. The story of a man that cuts his prey in half and leaves only the head. You didn’t think much of it at the time, but now that you’re in front of a graveyard of heads, you’re second-guessing.</string>
    <string name="G6_choice_1">That’s bullshit, don’t even think about it.</string>
    <string name="G6_choice_2">Gotta go fast!</string>
    <string name="G7_title">Every story comes to an end</string>
    <string name="G7_subtitle">Sometimes that’s for the best</string>
    <string name="G7_sentence">Is this the promised land? You arrive at the station. Your fantasies quickly fade to nothing but despair. At least you tried...</string>
    <string name="G7_choice_1">I should have stayed and played Minecraft.</string>
    <string name="G7_choice_2">I came as a stranger and left as a friend.</string>
    <string name="R1_title">The cursed station</string>
    <string name="R1_subtitle">Rascal rhymes with cabal </string>
    <string name="R1_sentence">During your escape, you take a wrong turn and land in the traitor\'s station, well known for hosting all kinds of rascals.</string>
    <string name="R1_choice_1">An happy rascal is an happy client.</string>
    <string name="R1_choice_2">All engines on and let it rip!</string>
    <string name="R2_title">A new hope</string>
    <string name="R2_subtitle">Don\'t sue us, please</string>
    <string name="R2_sentence">It\'s been a few days since you left, and you finally arrive at the first civilized station of your adventure. You take the opportunity to stop and explore.</string>
    <string name="R2_choice_1">Check the upgrade store.</string>
    <string name="R2_choice_2">Repair your locomotive.</string>
    <string name="R2_choice_3">Just turn the engine on, we\’re in a hurry!</string>
    <string name="R3_title">It\'s all about timing</string>
    <string name="R3_subtitle">And you’re not good at math...</string>
    <string name="R3_sentence">A big boom, a zblah, then a zcraaaatch. In a flash, you lost a wagon and {PASSENGER_NUMBER} passengers died.</string>
    <string name="R3_choice_1">Meh, there are plenty more of fish in the sea.</string>
    <string name="R3_choice_2">I\'ll bury them myself!</string>
    <string name="P1_title">Ghouls.</string>
    <string name="P1_subtitle">It’s gonna be a mess</string>
    <string name="P1_sentence">Yeah, you\'re blocked. Your smile gradually fades from your face. It wouldn\'t be so good to get eaten by ghouls.</string>
    <string name="P1_choice_1">There\'ll be ghouls for dinner! </string>
    <string name="P1_choice_2">*shhh* Let’s sneak for a bit.</string>
    <string name="P2_title">Mechanic Joe</string>
    <string name="P2_subtitle">A very handy man</string>
    <string name="P2_sentence">You’re shaking in panic when a little man whispers in your ear "is everything all right?". He wears an coverall and has a lot of tools. </string>
    <string name="P2_choice_1">You knock him out on reflex. What a fool you\'re.</string>
    <string name="P2_choice_2">Do you often whisper in people\'s ears like that?</string>
    <string name="P3_title">It\'s all about timing</string>
    <string name="P3_subtitle">And you\'re a lucky man</string>
    <string name="P3_sentence">He apologizes for scaring you. To make it up to you, he offers you a free repair.</string>
    <string name="P3_choice_1">It tastes better when it’s free!</string>
    <string name="P3_choice_2">I’m not a gold digger! *Ghouls are screaming in the distance*</string>
    <string name="PU1_title">Blood on your hands</string>
    <string name="PU1_subtitle">Don’t lie, it’s not the first time</string>
    <string name="PU1_sentence">Shit happens... You didn\'t mean to kill him, you’re not a murderer, right? Let\'s get back of tracks.</string>
    <string name="PU1_choice_1">Repair the locomotive.</string>
    <string name="PU1_choice_2">Throw the body with respect and repair the locomotive.</string>
    <string name="Y1_title">Let’s play episode 1</string>
    <string name="Y1_subtitle">I MISSED MINECRAFT SO MUCH</string>
    <string name="Y1_sentence">Minecraft.exe... Generating world... Loading chunks... Cheat: Activated... Here we go.</string>
    <string name="Y1_choice_1">Let’s chop some wood.</string>
    <string name="Y1_choice_2">You feel like an adventurer today. Let’s explore!</string>
    <string name="Y2_title">Let’s play episode 2</string>
    <string name="Y2_subtitle">I ALMOST DIED (SPOOKY)</string>
    <string name="Y2_sentence">You come to a cave and hear a skeleton...</string>
    <string name="Y2_choice_1">Craft a wooden sword and attack!</string>
    <string name="Y2_choice_2">I’d better stay far from that cave...</string>
    <string name="Y3_title">Let’s play episode 3</string>
    <string name="Y3_subtitle">IT’S GETTING HOT</string>
    <string name="Y3_sentence">You run into a sexy beach surrounded by mountains. Cosy place.</string>
    <string name="Y3_choice_1">Home sweet home!</string>
    <string name="Y3_choice_2">There must be a better spot.</string>
    <string name="Y4_title">Let’s play episode 4</string>
    <string name="Y4_subtitle">THERE’S AN INTRUDER IN MY HOUSE</string>
    <string name="Y4_sentence">Wow, that sound is getting louder and louder, it almost feels real...</string>
    <string name="Y4_choice_1">You take off your headset.</string>
    <string name="Y4_choice_2">Meh, that pipe is probably clogged again.</string>
    <string name="Y5_title">AFK</string>
    <string name="Y5_subtitle">I GOTTA GET MY SHIT TOGETHER</string>
    <string name="Y5_sentence">There’s a ghoul in front of you, and this game looks freaking real.</string>
    <string name="Y5_choice_1">*Heroic voice* I regret nothing.</string>
    <string name="Y5_choice_2">You take the ghoul\'s head and blow it on the computer. The real adventure begins now.</string>
    <string name="B1_title">Bad omen</string>
    <string name="B1_subtitle">Always leads to bad decision</string>
    <string name="B1_sentence">While you’re throwing the leftovers from your last fight, you find out that they all have the same tatoo on their arms.</string>
    <string name="B1_choice_1">Ugh. That’s some bad taste.</string>
    <string name="B1_choice_2">I want the same!</string>
    <string name="B2_title">The calm before the storm</string>
    <string name="B2_subtitle">You’d better wear a raincoat</string>
    <string name="B2_sentence">You’re heading back to your train while noises turn you on. It sounds like animal noises mixed with laughters.</string>
    <string name="B2_choice_1">I’m gonna take a look, it must be rats...</string>
    <string name="B2_choice_2">I’d better bring out my guns.</string>
    <string name="B2_choice_3">CHOO-CHOO, GOODBYE!</string>
    <string name="B3_title">A tricky decision</string>
    <string name="B3_subtitle">A lose lose situation</string>
    <string name="B3_sentence">You’re surrounded again, and we’re not gonna lie, it doesn’t look good. At least you didn’t met the Reaper... What are you gonna do?</string>
    <string name="B3_choice_1">I’m not gonna die today! CHOO-CHOO, attack!</string>
    <string name="B3_choice_2">Fleeing away doesn’t necessarily mean being a coward.</string>
    <string name="B4_title">1 vs 100</string>
    <string name="B4_subtitle">Hint: You’re not 1 of the 100s</string>
    <string name="B4_sentence">You wouldn’t wanna be at this precise moment on a daily basis. 100 rascals are roaming in front of you, and it doesn’t look good.</string>
    <string name="B4_choice_1">Use your secret weapon. Shhh, We’ll keep it secret. </string>
    <string name="B4_choice_2">This red barrel looks very appealing...</string>
    <string name="B4_choice_3">One head at a time, they’re all falling down. It shouldn’t be that long.</string>
    <string name="B5_title">The rise of the dark side</string>
    <string name="B5_subtitle">Still not a space sci-fi game</string>
    <string name="B5_sentence">Genocides are generally bad, but not today. Unfortunately, there are still a few survivors...</string>
    <string name="B5_choice_1">Philanthropy first!</string>
    <string name="B5_choice_2">My gun game is kinda rusty, let’s train a bit.</string>
    <string name="RAND1_title">Highway to hell</string>
    <string name="RAND1_subtitle">Mom get the camera!</string>
    <string name="RAND1_sentence">That’s not a bedtime story anymore. *coughs* and that thing smells like shiii... Oow lordy, it’s looking at you now. I don’t want to force your hand but it seems like you’ll have to fight. Ok bye.</string>
    <string name="RAND1_choice_1">I\'m one with the force and the force is with me.</string>
</resources>