<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/shop_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/vt323"
        android:text="@string/shop"
        android:textColor="#FFFFFF"
        android:textSize="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/return_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:fontFamily="@font/vt323"
        android:text="@string/go_back"
        android:textColor="#FFF"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/shop_train_parts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:clickable="true"
        android:fontFamily="@font/vt323"
        android:text="@string/train_parts"
        android:textColor="#FFF"
        android:textSize="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_title" />

    <TextView
        android:id="@+id/bronze_upgrade_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:fontFamily="@font/vt323"
        android:text="@string/bronze_upgrade_title"
        android:textColor="#FFF"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/bronze_upgrade_image"
        app:layout_constraintTop_toBottomOf="@+id/shop_train_parts" />

    <TextView
        android:id="@+id/bronze_upgrade_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:clickable="true"
        android:fontFamily="@font/vt323"
        android:text="@string/bronze_upgrade_description"
        android:textColor="#FFF"
        android:textSize="22dp"
        app:layout_constraintStart_toEndOf="@+id/bronze_upgrade_image"
        app:layout_constraintTop_toBottomOf="@+id/bronze_upgrade_title" />


    <ImageView
        android:id="@+id/bronze_upgrade_image"
        android:layout_width="67dp"
        android:layout_height="61dp"
        android:layout_marginTop="14dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="@+id/shop_train_parts"
        app:layout_constraintTop_toBottomOf="@+id/shop_train_parts"
        app:srcCompat="@drawable/train_upgrade_bronze" />

    <ImageView
        android:id="@+id/bronze_upgrade_buy"
        android:layout_width="74dp"
        android:layout_height="72dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toEndOf="@+id/bronze_upgrade_description"
        app:layout_constraintTop_toBottomOf="@+id/shop_train_parts"
        app:srcCompat="@drawable/buy_button_shop" />

    <TextView
        android:id="@+id/bronze_upgrade_buy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/vt323"
        android:text="@string/bronze_upgrade_price"
        android:textColor="#FFF"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/bronze_upgrade_buy"
        app:layout_constraintEnd_toEndOf="@+id/bronze_upgrade_buy"
        app:layout_constraintStart_toStartOf="@+id/bronze_upgrade_buy"
        app:layout_constraintTop_toTopOf="@+id/bronze_upgrade_buy" />

    <TextView
        android:id="@+id/silver_upgrade_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:fontFamily="@font/vt323"
        android:text="@string/silver_upgrade_title"
        android:textColor="#FFF"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/silver_upgrade_image"
        app:layout_constraintTop_toBottomOf="@+id/bronze_upgrade_image" />

    <TextView
        android:id="@+id/silver_upgrade_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:clickable="true"
        android:fontFamily="@font/vt323"
        android:text="@string/silver_upgrade_description"
        android:textColor="#FFF"
        android:textSize="22dp"
        app:layout_constraintStart_toEndOf="@+id/silver_upgrade_image"
        app:layout_constraintTop_toBottomOf="@+id/silver_upgrade_title" />


    <ImageView
        android:id="@+id/silver_upgrade_image"
        android:layout_width="67dp"
        android:layout_height="61dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="@+id/bronze_upgrade_image"
        app:layout_constraintTop_toBottomOf="@+id/bronze_upgrade_image"
        app:srcCompat="@drawable/train_upgrade_silver" />

    <ImageView
        android:id="@+id/silver_upgrade_buy"
        android:layout_width="74dp"
        android:layout_height="72dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="@+id/bronze_upgrade_buy"
        app:layout_constraintTop_toBottomOf="@+id/bronze_upgrade_image"
        app:srcCompat="@drawable/buy_button_shop" />

    <TextView
        android:id="@+id/silver_upgrade_buy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/vt323"
        android:text="@string/silver_upgrade_price"
        android:textColor="#FFF"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/silver_upgrade_buy"
        app:layout_constraintEnd_toEndOf="@+id/silver_upgrade_buy"
        app:layout_constraintStart_toStartOf="@+id/silver_upgrade_buy"
        app:layout_constraintTop_toTopOf="@+id/silver_upgrade_buy" />

    <TextView
        android:id="@+id/gold_upgrade_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:fontFamily="@font/vt323"
        android:text="@string/gold_upgrade_title"
        android:textColor="#FFF"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/gold_upgrade_image"
        app:layout_constraintTop_toBottomOf="@+id/silver_upgrade_image" />

    <TextView
        android:id="@+id/gold_upgrade_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:clickable="true"
        android:fontFamily="@font/vt323"
        android:text="@string/gold_upgrade_description"
        android:textColor="#FFF"
        android:textSize="22dp"
        app:layout_constraintStart_toEndOf="@+id/gold_upgrade_image"
        app:layout_constraintTop_toBottomOf="@+id/gold_upgrade_title" />


    <ImageView
        android:id="@+id/gold_upgrade_image"
        android:layout_width="67dp"
        android:layout_height="61dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="@+id/silver_upgrade_image"
        app:layout_constraintTop_toBottomOf="@+id/silver_upgrade_image"
        app:srcCompat="@drawable/train_upgrade_gold" />

    <ImageView
        android:id="@+id/gold_upgrade_buy"
        android:layout_width="74dp"
        android:layout_height="72dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="@+id/silver_upgrade_buy"
        app:layout_constraintTop_toBottomOf="@+id/silver_upgrade_image"
        app:srcCompat="@drawable/buy_button_shop" />

    <TextView
        android:id="@+id/gold_upgrade_buy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/vt323"
        android:text="@string/gold_upgrade_price"
        android:textColor="#FFF"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/gold_upgrade_buy"
        app:layout_constraintEnd_toEndOf="@+id/gold_upgrade_buy"
        app:layout_constraintStart_toStartOf="@+id/gold_upgrade_buy"
        app:layout_constraintTop_toTopOf="@+id/gold_upgrade_buy" />


</androidx.constraintlayout.widget.ConstraintLayout>